k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: supermarket
spec:
  replicas: 2
  selector:
    matchLabels: { app: web }
  template:
    metadata:
      labels: { app: web }
    spec:
      containers:
        - name: web
          image: docker.io/dhritp/supermarketai:latest
          ports:
            - containerPort: 3000
          resources:
            requests: { cpu: "100m", memory: "256Mi" }
            limits:   { cpu: "500m", memory: "512Mi" }
